kubernetes/apps/morphos/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: morphos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: morphos
                port:
                  name: http
      host: morphos.${domain}
  tls:
    - hosts:
        - morphos.${domain}
      secretName: morphos.${domain}-cert
